# TeleCRM

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.cursor/skills/telecrm-vps/: SKILL.md
app/: __init__.py  config.py  logging.py  main.py
app/ai/: __init__.py  deepseek.py  prompts.py  schemas.py  stt.py
app/bot/: __init__.py  states.py
app/bot/handlers/: __init__.py  admin.py  router.py
app/bot/keyboards/: __init__.py  card.py
app/bot/middlewares/: __init__.py  whitelist.py
app/database/: __init__.py  base.py  models.py  repositories.py
app/database/migrations/: env.py
app/database/migrations/versions/: 0001_initial.py  0002_agent_phone.py
app/services/: __init__.py  completeness.py  crm.py  docx.py  intake.py  search.py
app/utils/: phone.py  tempfiles.py
scripts/: init_db.py  install-ssh-key.ps1  remote_check_beget_db.sh  remote_install_app.sh  remote_migrate_beget_db.sh  remote_setup_mysql.sh  telecrm.service
tests/: conftest.py  test_admin.py  test_completeness.py  test_crm.py  test_docx.py  test_phone.py  test_schemas.py  test_whitelist.py
