[project]
name = "telecrm"
version = "0.1.0"
description = "Голосовая Telegram CRM для риелтора"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10",
    "aiohttp>=3.10",
    "aiomysql>=0.2",
    "alembic>=1.13",
    "cryptography>=42.0",
    "openai>=1.40",
    "pydantic-settings>=2.4",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
